# SolGuard

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  render.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codeql.yml
docs/: ARCHITECTURE.md  AUDIT.md  AUTHORIZATION.md  AUTONOMOUS_API.md  AUTONOMOUS_RUNNER.md  DASHBOARD.md  DEMO_PLAN.md  DEMO_RUNNER.md  DEPLOYMENT.md  INTEGRITY.md  JUDGE_RUNBOOK.md  LAUNCH_BRIEF.md  PAYSH.md  PRIVACY.md  RELEASE_REVIEW.md  SECURITY_PROOF.md  SUBMISSION_REQUIREMENTS.md  TECHNICAL_QA.md  THREAT_MODEL.md  WALLET_SIGNER.md  X402.md  X402_LIVE_DEVNET.md  architecture.html
evidence/: README.md  manifest.json
evidence/data/: benchmark.json  clean-process-runs.json  dependency-audit.json  external-demo-run.json  locked-requirements.txt  runtime-checkpoints.json
scripts/: generate_release_evidence.py
src/solguard/: __init__.py  agent_auth.py  audit.py  authorization.py  autonomous_api.py  autonomous_runner.py  contracts.py  dashboard.py  demo.py  detection.py  devnet_rpc.py  gateway.py  integrity.py  paysh.py  policy.py  privacy.py  security_proof.py  settlement.py  simulation.py  wallet_signer.py  x402.py  x402_live.py
src/solguard/dashboard_assets/: app.js  index.html  styles.css
src/solguard_demo_reference/: __init__.py  unsafe_wallet.py
tests/: __init__.py  test_agent_auth.py  test_audit.py  test_authorization.py  test_autonomous_api.py  test_autonomous_runner.py  test_contracts.py  test_dashboard.py  test_demo.py  test_detection.py  test_devnet_rpc.py  test_gateway.py  test_integrity.py  test_package.py  test_paysh.py  test_policy.py  test_privacy.py  test_security_proof.py  test_security_scenarios.py  test_simulation.py  test_wallet_signer.py  test_x402.py  test_x402_live.py
