[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "solguard"
version = "0.1.0"
description = "Pre-signing security gateway for autonomous agent payments"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [
  { name = "Tanvir Farhad" },
]
keywords = [
  "agentic-finance",
  "payment-security",
  "pre-signing",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []

[project.scripts]
solguard-dashboard = "solguard.dashboard:main"
solguard-demo = "solguard.demo:main"
solguard-paysh = "solguard.paysh:main"
solguard-x402-demo = "solguard.x402:main"
solguard-x402-live = "solguard.x402_live:main"

[project.optional-dependencies]
devnet = [
    "solana>=0.36,<0.40",
    "x402[httpx,svm]>=2.16,<3",
]

[dependency-groups]
dev = [
  "mypy>=1.17,<2",
  "pytest>=8.4,<10",
  "pytest-cov>=6.2,<8",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/solguard"]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov=solguard",
  "--cov-report=term-missing",
  "--cov-fail-under=100",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["solguard"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
pretty = true
show_error_codes = true
warn_unused_configs = true
